--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="assets/CSS/style.css">
     <title>Fake Dropbox</title>
 </head>
@@ -29,8 +30,18 @@
             </div>
 
         </section>
-        <section class="jumbo-container">
-
+        <section class="jumbo-container centering">
+            <div class="jumbo-heading">
+                <h1>Tutto ciò che ti serve per il <br>lavoro, in un unico posto</h1>
+            </div>
+            <div class="jumbo flex">
+                <div class="jumbo-paragraph">
+                    <p>Finalmente tutti i tuoi strumenti, contenuti e <br>collaboratori sono accessibili dallo stesso posto.<br>Dropbox Business è più di uno spazio di<br>archiviazione sicuro: è un modointelligente e<br>integrato per ottimizzare il flusso di lavoro<br>esistente.</p>
+                    <button class=" btn btn-blue">Inizia la tua prova gratuita</button>
+                    <p class="jp">annulla in qualsiasi momento</p>
+                    <i class="fa-solid fa-arrow-down"></i>
+                </div>
+                <img src="assets/img/jumbo.png" alt="">
         </section>
     </header>
 </body>
