fatta tab sotto 3 colonne a immagine float partner

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
                 <div class="col-container flex">
                     <div class="col1 ">
-                        <div class="single"> singolo</div>
+                        <div class="cntr-brdr-gry"> singolo</div>
                         <h3 class="text1 pd-top pd-bot pd-left">Professional</h3>
                         <p class="text2 pd-bot pd-left">$ 12.00</p>
                         <p class="text3 pd-bot25 pd-left">/mese</p>
@@ -91,7 +91,7 @@
                         <p class="text11 pd-left">Cartelle offline sui dispositivi mobili</p>
                     </div>
                     <div class="col2">
-                        <div class="single"> singolo</div>
+                        <div class="cntr-brdr-gry"> singolo</div>
                         <h3 class="text1 pd-top pd-bot pd-left">Professional</h3>
                         <p class="text2 pd-bot pd-left">$ 12.00</p>
                         <p class="text3 pd-bot25 pd-left">/mese</p>
@@ -108,7 +108,7 @@
                         <p class="text11 pd-left">Cartelle offline sui dispositivi mobili</p>
                     </div>
                     <div class="col3">
-                        <div class="single"> singolo</div>
+                        <div class="cntr-brdr-gry"> singolo</div>
                         <h3 class="text1 pd-top pd-bot pd-left">Professional</h3>
                         <p class="text2 pd-bot pd-left">$ 12.00</p>
                         <p class="text3 pd-bot25 pd-left">/mese</p>
@@ -124,6 +124,23 @@
                         <p class="text10 pd-bot pd-left">Invia file fino a 100 GB con<br> Dropbox Transfert</p>
                         <p class="text11 pd-left">Cartelle offline sui dispositivi mobili</p>
                     </div>   
+                </div>
+
+                <div class="tab-team">
+                    <div class="cntr-brdr-gry">team</div>
+                    <div class="main-tab-team">
+                        <h3 class="pd-top pd-left">Enterprise</h3>
+                        <h4 class="pd-top pd-left">Contatta l'ufficio vendite per i prezzi</h4>
+                        <p class="p-tab-team pd-left">Soluzioni personalizzate e supporto su misura per aiutare i professionistri IT nella gestione su <br> qualsiasi scala.</p>
+                        <button class="btn-tab-team btn-blue rltv">Contatta l'ufficio vendite</button>
+                    </div>
+                </div>
+
+                <div class="partner">
+                    <img src="assets/img/partner.png" alt="">
+                    <h3 class="partner-left">Entra in contatto con un <br> partner Dropbox</h3>
+                    <p class="partner-left">Trova un partner dropbox e Hellosign di fiducia. Otttieni le soluzioni e i servizi necessari pèer raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                    <button class="btn-white partner-left-margn">Trova un partner</button>
                 </div>
  
                  
