fatto parte dei box colorati

--- a/index.html
+++ b/index.html
@@ -191,6 +191,54 @@
                 </div>
 
                 <!-- Inizio box colorati -->
+
+                <div class="container-design flex">
+                    <div class="col-design flex">
+                        <div class="icons flex green">
+                           <img src="assets/img/designit.svg" alt="">
+                        </div>
+                        <div class="icons flex brown">
+                           <img src="assets/img/arizona_state_university.svg" alt="">
+                        </div>
+                        <div class="icons flex blue">
+                           <img src="assets/img/university_of_florida.svg" alt="">
+                        </div>
+                        <div class="icons flex red">
+                           <img src="assets/img/topps.svg" alt="">
+                        </div>
+                     </div>
+                    <div class="col-design center">
+                        <div class="col-logo pd-bot25">
+                            <img src="assets/img/designit.svg" alt="">
+                        </div>
+                        <div>
+                            <p class="p-col-design">I membri del nostro team lavorano constantemente in Paesi, fusi orari e uffici diversi.Ora molte soluzioni sono compatibilli con queste esigenze,ma nessuna è facile quanto Dropbox e Dropbox paper.Ora molte soluzioni sono compatibilli con queste esigenze,ma nessuna è facile quanto Dropbox e Dropbox paper.</p>
+                            <p>Morthen Thomese,Global IT Lead</p>
+                        </div>
+                    </div>
+                    <div class="col-design flex">
+                        <div class="icons flex red">
+                            <img src="assets/img/world_bicycle_relief.svg" alt="">
+                         </div>
+                         <div class="icons flex azure">
+                            <img src="assets/img/hearst_corp.svg" alt="">
+                         </div>
+                         <div class="icons flex blue">
+                            <img src="assets/img/lonely_planet.svg" alt="">
+                         </div>
+                         <div class="icons flex yellow">
+                            <img src="assets/img/clear_channel.svg" alt="">
+                         </div>
+                    </div>
+
+                    
+
+                </div>
+
+
+
+
+
             </main>
     
 </body>
