--- a/index.html
+++ b/index.html
@@ -265,7 +265,59 @@
             </main>
 
             <footer>
-                
+                <div class="container-footer flex centering">
+                    <div class="foot-li">
+                        <h4>Dropbox</h4>
+                        <ul>
+                            <li>Application Desktop</li>
+                            <li>Perchè Dropbox</li>
+                            <li>Piani</li>
+                            <li>Sicurezza</li>
+                            <li>Funzioni</li>
+                        </ul>
+                    </div>
+                    <div class="foot-li">
+                        <h4>Prodotti</h4>
+                        <ul>
+                            <li>Application Desktop</li>
+                            <li>Perchè Dropbox</li>
+                            <li>Piani</li>
+                            <li>Sicurezza</li>
+                            <li>Funzioni</li>
+                        </ul>
+                    </div>
+                    <div class="foot-li">
+                        <h4>Azienda</h4>
+                        <ul>
+                            <li>Application Desktop</li>
+                            <li>Perchè Dropbox</li>
+                            <li>Piani</li>
+                            <li>Sicurezza</li>
+                            <li>Funzioni</li>
+                        </ul>
+                    </div>
+                    <div class="foot-li">
+                        <h4>Supporto</h4>
+                        <ul>
+                            <li>Application Desktop</li>
+                            <li>Perchè Dropbox</li>
+                            <li>Piani</li>
+                            <li>Sicurezza</li>
+                            <li>Funzioni</li>
+                        </ul>
+                    </div>
+                    <div class="foot-li">
+                        <h4>Community</h4>
+                        <ul>
+                            <li>Application Desktop</li>
+                            <li>Perchè Dropbox</li>
+                            <li>Piani</li>
+                            <li>Sicurezza</li>
+                            <li>Funzioni</li>
+                        </ul>
+                    </div>
+
+                </div>
             </footer>
     
 </body>
