aggiunto scritte bianche, hover su domande, icone alle colonne,overflow

--- a/index.html
+++ b/index.html
@@ -75,60 +75,72 @@
 
                 <div class="col-container flex">
                     <div class="col1 ">
-                        <div class="cntr-brdr-gry"> singolo</div>
-                        <h3 class="text1 pd-top pd-bot pd-left">Professional</h3>
+                        <div class="cntr-brdr-gry">
+                        <i class="fa-solid fa-user"></i> singolo</div>
+                        <div class="pad-col">
+                            <h3 class="text1 pd-top pd-bot pd-left">Professional</h3>
                         <p class="text2 pd-bot pd-left">$ 12.00</p>
                         <p class="text3 pd-bot25 pd-left">/mese</p>
-                        <p class="text4 pd-bot pd-left">1 utente</p>
-                        <p class="text5 pd-bot pd-left">5 TB di spazio di archiviazione<br>sicuro</p>
-                        <p class="text6 pd-bot25 pd-left">Funzioni di produttività premium<br>e condivisione file semplice e sicura</p>
+                        <p class="text4 pd-bot pd-left"><i class="fa-solid fa-user"></i>1 utente</p>
+                        <p class="text5 pd-bot pd-left"><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione sicuro</p>
+                        <p class="text6 pd-bot25 pd-left"><i class="fa-solid fa-code"></i>Funzioni di produttività premium e condivisione file semplice e sicura</p>
                         <button class="col-btn btn-blue "> Prova gratis per 30 giorni </button>
                         <br>
                         <p class="text7 pd-left"><a href="" class="no-underline">oppure</a></p>
                         <p class="text8"><a href="" class="underline">acquista ora</a></p>
                         <div class="hr"></div>
                         <p class="text9 pd-top pd-bot pd-left"><strong>Punti Salienti del piano</strong></p>
-                        <p class="text10 pd-bot pd-left">Invia file fino a 100 GB con<br> Dropbox Transfert</p>
-                        <p class="text11 pd-left">Cartelle offline sui dispositivi mobili</p>
+                        <p class="text10 pd-bot pd-left"><i class="fa-solid fa-check"></i>Invia file fino a 100 GB con Dropbox Transfert</p>
+                        <p class="text11 pd-left"><i class="fa-solid fa-check"></i>Cartelle offline sui dispositivi mobili</p>
+                        </div>
                     </div>
                     <div class="col2">
-                        <div class="cntr-brdr-gry"> singolo</div>
-                        <h3 class="text1 pd-top pd-bot pd-left">Professional</h3>
-                        <p class="text2 pd-bot pd-left">$ 12.00</p>
-                        <p class="text3 pd-bot25 pd-left">/mese</p>
-                        <p class="text4 pd-bot pd-left">1 utente</p>
-                        <p class="text5 pd-bot pd-left">5 TB di spazio di archiviazione<br>sicuro</p>
-                        <p class="text6 pd-bot25 pd-left">Funzioni di produttività premium<br>e condivisione file semplice e sicura</p>
-                        <button class="col-btn btn-blue "> Prova gratis per 30 giorni </button>
-                        <br>
-                        <p class="text7 pd-left"><a href="" class="no-underline">oppure</a></p>
-                        <p class="text8"><a href="" class="underline">acquista ora</a></p>
-                        <div class="hr"></div>
-                        <p class="text9 pd-top pd-bot pd-left"><strong>Punti Salienti del piano</strong></p>
-                        <p class="text10 pd-bot pd-left">Invia file fino a 100 GB con<br> Dropbox Transfert</p>
-                        <p class="text11 pd-left">Cartelle offline sui dispositivi mobili</p>
+                        <div class="cntr-brdr-gry"><i class="fa-solid fa-users"></i>Team</div>
+                        <div class="pad-col">
+                            <h3 class="text1 pd-top pd-bot pd-left">Professional</h3>
+                            <p class="text2 pd-bot pd-left">$ 12.00</p>
+                            <p class="text3 pd-bot25 pd-left">/mese</p>
+                            <p class="text4 pd-bot pd-left"><i class="fa-solid fa-users"></i>3 o più utenti</p>
+                            <p class="text5 pd-bot pd-left"><i class="fa-solid fa-folder"></i>Tutto lo spazio di cui ha bisogno il tuo team</p>
+                            <p class="text6 pd-bot25 pd-left"><i class="fa-solid fa-code"></i>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del team</p>
+                            <button class="col-btn btn-blue "> Prova gratis per 30 giorni </button>
+                            <br>
+                            <p class="text7 pd-left"><a href="" class="no-underline">oppure</a></p>
+                            <p class="text8"><a href="" class="underline">acquista ora</a></p>
+                            <div class="hr"></div>
+                            <p class="text9 pd-top pd-bot pd-left"><strong>Punti Salienti del piano</strong></p>
+                            <p class="text10 pd-bot pd-left"><i class="fa-solid fa-check"></i>Nessun limite di spazio per i file</p>
+                            <p class="pd-bot pd-left"><i class="fa-solid fa-check"></i>Cartelle offline sui dispositivi mobili</p>
+                            <p class="pd-left pd-bot"><i class="fa-solid fa-check"></i>Risparmio del 50% rispetto alle iscrizioni singole</p>
+                            <p class="pd-left pd-bot"><i class="fa-solid fa-check"></i>Possibilità di inserire nuovi membri nel team</p>
+                            <p class="pd-left pd-bot"><i class="fa-solid fa-check"></i>Gestioni dei permessi in base al ruolo</p>
+                        </div>
                     </div>
                     <div class="col3">
-                        <div class="cntr-brdr-gry"> singolo</div>
-                        <h3 class="text1 pd-top pd-bot pd-left">Professional</h3>
+                        <div class="cntr-brdr-gry"><i class="fa-solid fa-building"></i>Azienda</div>
+                        <div class="pad-col">
+                            <h3 class="text1 pd-top pd-bot pd-left">Professional</h3>
                         <p class="text2 pd-bot pd-left">$ 12.00</p>
                         <p class="text3 pd-bot25 pd-left">/mese</p>
-                        <p class="text4 pd-bot pd-left">1 utente</p>
-                        <p class="text5 pd-bot pd-left">5 TB di spazio di archiviazione<br>sicuro</p>
-                        <p class="text6 pd-bot25 pd-left">Funzioni di produttività premium<br>e condivisione file semplice e sicura</p>
+                        <p class="text4 pd-bot pd-left"><i class="fa-solid fa-user"></i>1 utente</p>
+                        <p class="text5 pd-bot pd-left"><i class="fa-solid fa-folder"></i>Soluzioni personalizzabili per la <br> tua azienda.</p>
+                        <p class="text6 pd-bot25 pd-left"><i class="fa-solid fa-code"></i>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</p>
                         <button class="col-btn btn-blue "> Prova gratis per 30 giorni </button>
                         <br>
                         <p class="text7 pd-left"><a href="" class="no-underline">oppure</a></p>
                         <p class="text8"><a href="" class="underline">acquista ora</a></p>
                         <div class="hr"></div>
                         <p class="text9 pd-top pd-bot pd-left"><strong>Punti Salienti del piano</strong></p>
-                        <p class="text10 pd-bot pd-left">Invia file fino a 100 GB con<br> Dropbox Transfert</p>
-                        <p class="text11 pd-left">Cartelle offline sui dispositivi mobili</p>
-                    </div>   
+                        <p class="text10 pd-bot pd-left"><i class="fa-solid fa-check"></i>Cartelle offline sui dispositivi mobili</p>
+                        <p class="text11 pd-left pd-bot"><i class="fa-solid fa-check"></i>Servizio assistenza 24h</p>
+                        <p class="text11 pd-left"><i class="fa-solid fa-check"></i>Possibilità di personalizzazione totale</p>
+
+                        </div>
+                    </div>
                 </div>
 
                 <div class="tab-team">
-                    <div class="cntr-brdr-gry">team</div>
+                    <div class="cntr-brdr-gry"><i class="fa-solid fa-building"></i>team</div>
                     <div class="main-tab-team">
                         <h3 class="pd-top pd-left">Enterprise</h3>
                         <h4 class="pd-top pd-left">Contatta l'ufficio vendite per i prezzi</h4>
@@ -140,11 +152,12 @@
                 <!-- immagine con destra le scritte -->
 
                 <div class="partner">
-                    <img src="assets/img/partner.png" alt="">
+                    <img src="assets/img/partner.png" alt="" class="clearfix">
                     <h3 class="partner-left">Entra in contatto con un <br> partner Dropbox</h3>
                     <p class="partner-left">Trova un partner dropbox e Hellosign di fiducia. Otttieni le soluzioni e i servizi necessari pèer raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
                     <button class="btn-white partner-left-margn">Trova un partner</button>
                 </div>
+            
 
                 <!-- box con'allinterno funzioni dropbox -->
 
@@ -208,13 +221,18 @@
                            <img src="assets/img/topps.svg" alt="">
                         </div>
                      </div>
-                    <div class="col-design center">
+                    <div class="col-design center" id="overflow">
                         <div class="col-logo pd-bot25">
                             <img src="assets/img/designit.svg" alt="">
                         </div>
                         <div>
                             <p class="p-col-design">I membri del nostro team lavorano constantemente in Paesi, fusi orari e uffici diversi.Ora molte soluzioni sono compatibilli con queste esigenze,ma nessuna è facile quanto Dropbox e Dropbox paper.Ora molte soluzioni sono compatibilli con queste esigenze,ma nessuna è facile quanto Dropbox e Dropbox paper.</p>
-                            <p>Morthen Thomese,Global IT Lead</p>
+                            <p></p>Morthen Thomese,Global IT Lead</p>
+                            <br>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus officia vel eveniet? Quidem laboriosam nihil qui, saepe laudantium officiis illum eius quos quisquam rem! Necessitatibus facilis labore reprehenderit iure ad.
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, ad. Tempore ea, sapiente, placeat veritatis libero laborum, veniam recusandae impedit ab facere dolorem exercitationem enim repudiandae dolor nesciunt omnis tenetur?
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam earum tempore repellendus esse distinctio nemo, error totam velit voluptatum dicta necessitatibus ullam deleniti eveniet commodi amet illo possimus, architecto dolores?
+                            </p>
                         </div>
                     </div>
                     <div class="col-design flex">
@@ -250,14 +268,17 @@
                     <div class="ask-div flex">
                         Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
                         <i class="fa-solid fa-chevron-down"></i>
+                        <div class="answer pd-top">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut delectus, soluta tempora suscipit porro distinctio placeat quod repellendus consectetur veniam harum tenetur aliquam ullam tempore quos error quo amet natus?</div>
                     </div>
                     <div class="ask-div flex">
                         Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
                         <i class="fa-solid fa-chevron-down"></i>
+                        <div class="answer pd-top">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut delectus, soluta tempora suscipit porro distinctio placeat quod repellendus consectetur veniam harum tenetur aliquam ullam tempore quos error quo amet natus?</div>
                     </div>
                     <div class="ask-div flex">
                         Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
                         <i class="fa-solid fa-chevron-down"></i>
+                        <div class="answer pd-top">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut delectus, soluta tempora suscipit porro distinctio placeat quod repellendus consectetur veniam harum tenetur aliquam ullam tempore quos error quo amet natus?</div>
                     </div>
                 </div>
 
@@ -316,7 +337,10 @@
                             <li>Funzioni</li>
                         </ul>
                     </div>
-
+                </div>
+                <br>
+                <div class="centering">
+                    <span class="foot-span"><i class="fa-solid fa-earth-europe"></i>Italiano<i class="fa-solid fa-caret-up"></i></span>
                 </div>
             </footer>
     
