cambiato checkbox cpn input radio, allineato jumbo img e testo

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                 <!-- checkbox   -->
                     
                 <div id="checkbox1">
-                    <input type="checkbox" id="month" name="month" value="checkmonth">
-                    <label for="month"> Fatturazione mensile</label>
+                    <input type="radio" id="html" name="fav_language" value="HTML">
+                    <label for="html">Fatturazione mensile</label>
                 </div>  
 
                 <div id="checkbox2">
-                    <input type="checkbox" id="year" name="year" value="checkyear">
-                    <label for="year"> I have a bike</label><br>
+                    <input type="radio" id="html" name="fav_language" value="HTML">
+                    <label for="html">Fatturazione annuale</label>
                 </div>
 
              <!-- tre colonne con space beetwen -->
