snellito codice aggiunto classi

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header>
 
-        <section class="header-container flex">
+        <section class="header-container flex spc-btwn">
 
             <div class="header-left flex">
                 <img src="assets/img/logo-small.png" alt="logo-piccolo">
@@ -61,21 +61,21 @@
 
                 <!-- checkbox   -->
                     
-                <div id="checkbox1">
+                <div id="checkbox1" class="nln-blck">
                     <input type="radio" id="html" name="fav_language" value="HTML">
                     <label for="html">Fatturazione mensile</label>
                 </div>  
 
-                <div id="checkbox2">
+                <div id="checkbox2" class="nln-blck">
                     <input type="radio" id="html" name="fav_language" value="HTML">
                     <label for="html">Fatturazione annuale</label>
                 </div>
 
              <!-- tre colonne con space beetwen -->
 
-                <div class="col-container flex">
+                <div class="col-container flex spc-btwn">
                     <div class="col1 ">
-                        <div class="cntr-brdr-gry">
+                        <div class="cntr-brdr-gry brdr-bttm-gry">
                         <i class="fa-solid fa-user"></i> singolo</div>
                         <div class="pad-col">
                             <h3 class="text1 pd-top pd-bot pd-left">Professional</h3>
@@ -86,8 +86,8 @@
                         <p class="text6 pd-bot25 pd-left"><i class="fa-solid fa-code"></i>Funzioni di produttività premium e condivisione file semplice e sicura</p>
                         <button class="col-btn btn-blue "> Prova gratis per 30 giorni </button>
                         <br>
-                        <p class="text7 pd-left"><a href="" class="no-underline">oppure</a></p>
-                        <p class="text8"><a href="" class="underline">acquista ora</a></p>
+                        <p class="text7 nln-blck pd-left"><a href="" class="no-underline">oppure</a></p>
+                        <p class="text8 nln-blck"><a href="" class="underline">acquista ora</a></p>
                         <div class="hr"></div>
                         <p class="text9 pd-top pd-bot pd-left"><strong>Punti Salienti del piano</strong></p>
                         <p class="text10 pd-bot pd-left"><i class="fa-solid fa-check"></i>Invia file fino a 100 GB con Dropbox Transfert</p>
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                     <div class="col2">
-                        <div class="cntr-brdr-gry"><i class="fa-solid fa-users"></i>Team</div>
+                        <div class="cntr-brdr-gry brdr-bttm-gry"><i class="fa-solid fa-users"></i>Team</div>
                         <div class="pad-col">
                             <h3 class="text1 pd-top pd-bot pd-left">Professional</h3>
                             <p class="text2 pd-bot pd-left">$ 12.00</p>
@@ -105,8 +105,8 @@
                             <p class="text6 pd-bot25 pd-left"><i class="fa-solid fa-code"></i>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del team</p>
                             <button class="col-btn btn-blue "> Prova gratis per 30 giorni </button>
                             <br>
-                            <p class="text7 pd-left"><a href="" class="no-underline">oppure</a></p>
-                            <p class="text8"><a href="" class="underline">acquista ora</a></p>
+                            <p class="text7 nln-blck pd-left"><a href="" class="no-underline">oppure</a></p>
+                            <p class="text8 nln-blck"><a href="" class="underline">acquista ora</a></p>
                             <div class="hr"></div>
                             <p class="text9 pd-top pd-bot pd-left"><strong>Punti Salienti del piano</strong></p>
                             <p class="text10 pd-bot pd-left"><i class="fa-solid fa-check"></i>Nessun limite di spazio per i file</p>
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                     <div class="col3">
-                        <div class="cntr-brdr-gry"><i class="fa-solid fa-building"></i>Azienda</div>
+                        <div class="cntr-brdr-gry brdr-bttm-gry"><i class="fa-solid fa-building"></i>Azienda</div>
                         <div class="pad-col">
                             <h3 class="text1 pd-top pd-bot pd-left">Professional</h3>
                         <p class="text2 pd-bot pd-left">$ 12.00</p>
@@ -127,8 +127,8 @@
                         <p class="text6 pd-bot25 pd-left"><i class="fa-solid fa-code"></i>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</p>
                         <button class="col-btn btn-blue "> Prova gratis per 30 giorni </button>
                         <br>
-                        <p class="text7 pd-left"><a href="" class="no-underline">oppure</a></p>
-                        <p class="text8"><a href="" class="underline">acquista ora</a></p>
+                        <p class="text7 nln-blck pd-left"><a href="" class="no-underline">oppure</a></p>
+                        <p class="text8 nln-blck"><a href="" class="underline">acquista ora</a></p>
                         <div class="hr"></div>
                         <p class="text9 pd-top pd-bot pd-left"><strong>Punti Salienti del piano</strong></p>
                         <p class="text10 pd-bot pd-left"><i class="fa-solid fa-check"></i>Cartelle offline sui dispositivi mobili</p>
@@ -140,7 +140,7 @@
                 </div>
 
                 <div class="tab-team">
-                    <div class="cntr-brdr-gry"><i class="fa-solid fa-building"></i>team</div>
+                    <div class="cntr-brdr-gry brdr-bttm-gry"><i class="fa-solid fa-building"></i>team</div>
                     <div class="main-tab-team">
                         <h3 class="pd-top pd-left">Enterprise</h3>
                         <h4 class="pd-top pd-left">Contatta l'ufficio vendite per i prezzi</h4>
@@ -163,7 +163,7 @@
 
                 <h3 class="h3-dropbox">Esegui operazioni con Dropbox Business</h3>
 
-                <div class="function-container flex">
+                <div class="function-container spc-btwn flex">
                     <div class="img-function">
                         <img src="assets/img/business-feature-switching-tools.png" alt="">
                         <h4 class="h4-function">Passa da meno di uno <br> strumento all'altro</h4>
@@ -205,7 +205,7 @@
 
                 <!-- Inizio box colorati -->
 
-                <div class="container-design flex">
+                <div class="container-design spc-btwn flex">
 
                     <div class="col-design flex">
                         <div class="icons flex green">
@@ -222,7 +222,7 @@
                         </div>
                      </div>
                     <div class="col-design center" id="overflow">
-                        <div class="col-logo pd-bot25">
+                        <div class="col-logo brdr-bttm-gry pd-bot25">
                             <img src="assets/img/designit.svg" alt="">
                         </div>
                         <div>
@@ -254,28 +254,29 @@
 
                 <!-- fine box colorati -->
 
-                <div class="text-button flex">
-                    <h2>Porta Dropbox Business<br>nella tua azienda.</h2>
-                    <button class="btn-noborder-white">Inizia la tua prova gratuita</button>
-                </div>
-
                 <!-- inizio domande frequenti  -->
 
+                <div class="text-button spc-btwn flex">
+                    <h2>Porta Dropbox Business<br>nella tua azienda.</h2>
+                    <button class="btn-noborder-white nln-blck">Inizia la tua prova gratuita</button>
+                </div>
+
+
                 <div class="centering60 ask">
-                    <div class="ask-div1 ">
+                    <div class="ask-div1 spc-btwn brdr-bttm-gry">
                         <h3>Domande frequenti</h3>
                     </div>
-                    <div class="ask-div flex">
+                    <div class="ask-div flex spc-btwn brdr-bttm-gry">
                         Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
                         <i class="fa-solid fa-chevron-down"></i>
                         <div class="answer pd-top">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut delectus, soluta tempora suscipit porro distinctio placeat quod repellendus consectetur veniam harum tenetur aliquam ullam tempore quos error quo amet natus?</div>
                     </div>
-                    <div class="ask-div flex">
+                    <div class="ask-div flex spc-btwn brdr-bttm-gry">
                         Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
                         <i class="fa-solid fa-chevron-down"></i>
                         <div class="answer pd-top">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut delectus, soluta tempora suscipit porro distinctio placeat quod repellendus consectetur veniam harum tenetur aliquam ullam tempore quos error quo amet natus?</div>
                     </div>
-                    <div class="ask-div flex">
+                    <div class="ask-div flex spc-btwn brdr-bttm-gry">
                         Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
                         <i class="fa-solid fa-chevron-down"></i>
                         <div class="answer pd-top">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut delectus, soluta tempora suscipit porro distinctio placeat quod repellendus consectetur veniam harum tenetur aliquam ullam tempore quos error quo amet natus?</div>
@@ -286,7 +287,7 @@
             </main>
 
             <footer>
-                <div class="container-footer flex centering">
+                <div class="container-footer spc-btwn  brdr-bttm-gry flex centering">
                     <div class="foot-li">
                         <h4>Dropbox</h4>
                         <ul>
